--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Box personal portfolio Template</title>
-    <link rel="icon" href="img/fav.png" type="image/x-icon">
+    <title>Marwane Khsime</title>
+    <link rel="icon" href="img/fav.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -48,36 +48,8 @@
             <div class="box-logo">
                 <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
             </div>
-            <!-- box-nav -->
-            <a class="box-primary-nav-trigger" href="#0">
-                <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
-            </a>
-            <!-- box-primary-nav-trigger -->
         </header>
         <!-- end box header -->
-
-        <!-- nav -->
-        <nav>
-            <ul class="box-primary-nav">
-                <li class="box-label">About me</li>
-
-                <li><a href="index.html">Intro</a> <i class="ion-ios-circle-filled color"></i></li>
-                <li><a href="about.html">About me</a></li>
-                <li><a href="services.html">services</a></li>
-                <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="contact.html">contact me</a></li>
-
-
-
-                <li class="box-label">Follow me</li>
-
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
-            </ul>
-        </nav>
-        <!-- end nav -->
 
         <!-- box-intro -->
         <section class="box-intro">
@@ -137,7 +109,7 @@
     </div>
 
     <div class="top-bar">
-        <h1>My projects</h1>
+        <h1>Projects</h1>
     </div>
 
     <!-- portfolio div -->
@@ -147,7 +119,8 @@
                 <!-- single work -->
                 <div class="col-md-4 col-sm-6 fashion logo">
                     <a href="projects/goal-buster.html" class="portfolio_item">
-                        <img src="./img/bdxmetropole-icon.png" alt="image" class="img-responsive" style="width: 100%;" />
+                        <img src="./img/bdxmetropole-icon.png" alt="image" class="img-responsive"
+                            style="width: 100%;" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
@@ -179,8 +152,7 @@
                 <!-- single work -->
                 <div class="col-md-4 col-sm-6 fashion logo">
                     <a href="projects/ensosp.html" class="portfolio_item">
-                        <img src="./img/ensosp-icon.png" alt="image" class="img-responsive"
-                            style="width: 100%;" />
+                        <img src="./img/ensosp-icon.png" alt="image" class="img-responsive" style="width: 100%;" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
@@ -247,99 +219,76 @@
     </div>
     <!-- end portfolio div -->
 
+    <div class="top-bar">
+        <h1>Want to know more ?</h1>
+    </div>
+
     <!-- Contact me -->
     <div class="container main-container">
         <div class="col-md-6">
-            <form action="#" method="post">
+            <form method="POST" action="https://formspree.io/mbjgrwaz">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="name">
-                            <span class="">your name</span>
+                            <input type="text" name="name" required>
+                            <span>your name</span>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="email">
-                            <span class="">your email</span>
+                            <input type="text" name="_replyto" required>
+                            <span>your email</span>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="input-contact">
-                            <input type="text" name="object">
-                            <span class="">object</span>
+                            <input type="text" name="object" required>
+                            <span>object</span>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="textarea-contact">
-                            <grammarly-extension class="_1KJtL"
-                                style="position: absolute; top: -1px; left: -1px; pointer-events: none;">
-                                <div data-grammarly-part="highlights" class="u_fNK"
-                                    style="position: absolute; top: 0px; left: 0px;">
-                                    <div
-                                        style="box-sizing: content-box; top: 1px; left: 1px; width: 553px; height: 198px; position: relative; pointer-events: none; overflow: hidden; border: 0px; border-radius: 0px; padding: 0px; margin: 0px;">
-                                        <div style="position: absolute; top: 0px; left: 0px;">
-                                            <div style="height: 1225px; width: 2233px;">
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div data-grammarly-part="button" class="u_fNK"
-                                    style="position: absolute; top: 0px; left: 0px;">
-                                    <div
-                                        style="box-sizing: content-box; top: 1px; left: 1px; width: 553px; height: 198px; position: relative; pointer-events: none; overflow: hidden; border: 0px; border-radius: 0px; padding: 0px; margin: 0px;">
-                                        <div
-                                            style="position: absolute; transform: translate(-100%, -100%); top: 178px; left: 533px; width: auto; height: auto; pointer-events: all;">
-                                            <div style="flex-direction: row; display: flex;">
-                                                <div style="position: relative;"></div>
-                                                <div>
-                                                    <div class="_5WizN _1QzSN">
-                                                        <div class="_3YmQx">
-                                                            <div title="Protected by Grammarly" class="_3QdKe">&nbsp;
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </grammarly-extension>
-                            <textarea name="message" spellcheck="false"></textarea>
-                            <span class="">message</span>
+                            <textarea name="message"></textarea>
+                            <span>message</span>
                         </div>
                     </div>
-                    <div class="col-md-12">
-                        <a href="#" class="btn btn-box">Send</a>
-                    </div>
+                </div>
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-box">Submit</button>
                 </div>
             </form>
         </div>
 
         <div class="col-md-6">
-            <h3 class="text-uppercase">contact me</h3>
-            <h5>Creative &amp; Lorem ipsum dolor sit amet</h5>
+            <h3 class="text-uppercase">Let's get in touch !</h3>
+            <p>Send me an email, or find me on one of the social networks below. It is always a pleasure for me to
+                interact with new
+                people!</p>
             <div class="h-30"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus.
-                Inscite
-                autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. Tecum optime, deinde etiam
-                cum
-                mediocri amico. Et nemo nimium beatus est; Ac ne plura complectar-sunt enim innumerabilia-, bene laudata
-                virtus voluptatis aditus </p>
             <div class="contact-info">
-                <p><i class="ion-android-call"></i> 0100 787 3456</p>
-                <p><i class="ion-ios-email"></i> box@info.com</p>
+                <p><i class="ion-android-call"></i> +33 6 34 82 99 38</p>
+                <p><i class="ion-ios-email"></i> marwane.khsime@gmail.com</p>
             </div>
+            <ul class="social-ul">
+                <li class="box-social"><a href="https://www.linkedin.com/in/marwane-khsime/"><i
+                            class="ion-social-linkedin"></i></a>
+                </li>
+                <li class="box-social"><a href="https://github.com/Khsime-Marwane"><i class="ion-social-github"></i></a>
+                </li>
+                <li class="box-social"><a href="https://www.instagram.com/marwane_khsime/"><i
+                            class="ion-social-instagram-outline"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/MKhsime"><i class="ion-social-twitter"></i></a></li>
+            </ul>
         </div>
+
+
     </div>
     <!-- Contact me -->
 
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© Box Portfolio 2016</p>
+            <p class="copyright">© Marwane Khsime 2019
         </div>
     </footer>
     <!-- end footer -->
