--- a/projects/trib.html
+++ b/projects/trib.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Box personal portfolio Template</title>
-    <link rel="icon" href="../img/fav.png" type="image/x-icon">
+    <title>Marwane Khsime</title>
+    <link rel="icon" href="../img/fav.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -49,11 +49,6 @@
             <div class="box-logo">
                 <a href="../index.html"><img src="../img/logo.png" width="80" alt="Logo"></a>
             </div>
-            <!-- box-nav -->
-            <a class="box-primary-nav-trigger" href="#0">
-                <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
-            </a>
-            <!-- box-primary-nav-trigger -->
         </header>
         <!-- end box-header -->
     </div>
@@ -61,7 +56,7 @@
     <!-- top-bar -->
     <div class="top-bar">
         <h1>TRIBRATING</h1>
-        <p><a href="#">Home</a> / <a href="#">portfolio</a> / TRIBRATING</p>
+        <p><a href="../index.html">Home</a> / portfolio / TRIBRATING</p>
     </div>
     <!-- end top-bar -->
 
@@ -114,7 +109,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© Box Portfolio 2016</p>
+            <p class="copyright">© Marwane Khsime 2019</p>
         </div>
     </footer>
     <!-- end footer -->
