--- a/index.html
+++ b/index.html
@@ -264,6 +264,16 @@
             <p>Send me an email, or find me on one of the social networks below. It is always a pleasure for me to
                 interact with new
                 people!</p>
+            <p>You can also download my resume below 👇!</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <a href="./pdf/CV_KHSIME_MARWANE_EN.pdf" class="btn btn-box" download>ENGLISH RESUME</a>
+                </div>
+                <div class="col-md-3"></div>
+                <div class="col-md-3">
+                    <a href="./pdf/CV_KHSIME_MARWANE_FR.pdf" class="btn btn-box" download>FRENCH RESUME</a>
+                </div>
+            </div>
             <div class="h-30"></div>
             <div class="contact-info">
                 <p><i class="ion-android-call"></i> +33 6 34 82 99 38</p>
