fix technology stack

--- a/projects/ensosp.html
+++ b/projects/ensosp.html
@@ -114,19 +114,14 @@
         </div>
 
         <div class="col-md-3">
+            <h3>Technology Stack</h3>
             <ul class="cat-ul">
-                <li><i class="ion-ios-circle-filled"></i> Design</li>
-                <li><i class="ion-ios-circle-filled"></i> consectetur adipiscing</li>
-                <li><i class="ion-ios-circle-filled"></i> et gubernationis</li>
-                <li><i class="ion-ios-circle-filled"></i> Aliter enim nosmet</li>
-            </ul>
-            <div class="h-10"></div>
-            <h4>Share</h4>
-            <ul class="social-ul">
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
+                <li><i class="ion-ios-circle-filled"></i> Java</li>
+                <li><i class="ion-ios-circle-filled"></i> SpringBoot</li>
+                <li><i class="ion-ios-circle-filled"></i> Angular</li>
+                <li><i class="ion-ios-circle-filled"></i> AngularJS</li>
+                <li><i class="ion-ios-circle-filled"></i> MySQL</li>
+                <li><i class="ion-ios-circle-filled"></i> SSO (Keycloak)</li>
             </ul>
         </div>
     </div>
