--- a/projects/holo.html
+++ b/projects/holo.html
@@ -75,17 +75,21 @@
 
         <div class="col-md-9">
             <h6>WHAT'S THIS ?</h6>
-            <p>HOLO is a holographic structure allowing the projection of 3D objects and scenes interactively. It is possible to
-            control your projections only using your hands thanks to an infrared motion detection technology (LEAP MOTION).</p>
+            <p>HOLO is a holographic structure allowing the projection of 3D objects and scenes interactively. It is
+                possible to
+                control your projections only using your hands thanks to an infrared motion detection technology (LEAP
+                MOTION).</p>
 
             <h6>MY MISSION</h6>
-            <p>Within the HOLO team, I occupy the role of Unity developer under C #. I participate in the development of the scene
-            management engine as well as in the development of the HOLO desktop application.</p>
+            <p>Within the HOLO team, I occupy the role of Unity developer under C #. I participate in the development of
+                the scene
+                management engine as well as in the development of the HOLO desktop application.</p>
 
             <p>https://eip.epitech.eu/2020/holo/</p>
         </div>
 
         <div class="col-md-3">
+            <h3>Technology Stack</h3>
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> Unity3D</li>
                 <li><i class="ion-ios-circle-filled"></i> C#</li>
