--- a/projects/np6.html
+++ b/projects/np6.html
@@ -122,6 +122,7 @@
         </div>
 
         <div class="col-md-3">
+            <h3>Technology Stack</h3>
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> Angular</li>
                 <li><i class="ion-ios-circle-filled"></i> Node.JS</li>
