--- a/projects/oa.html
+++ b/projects/oa.html
@@ -80,10 +80,12 @@
                 administration platform and automated billing and emailing management.</p>
 
             <h6>MY MISSION</h6>
-            <p>My mission was to create this administration platform, whether at the frontend or backend level, all from scratch.</p>
+            <p>My mission was to create this administration platform, whether at the frontend or backend level, all from
+                scratch.</p>
         </div>
 
         <div class="col-md-3">
+            <h3>Technology Stack</h3>
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> Angular.JS</li>
                 <li><i class="ion-ios-circle-filled"></i> Node.JS</li>
