--- a/projects/goal-buster.html
+++ b/projects/goal-buster.html
@@ -113,8 +113,8 @@
                             thanks to ingenious women and men.</p><br>
                         <div class="row">
                             <div class="col-sm-2">
-                                <img src="./../img/goal-buster/lespepitestech.jpg"
-                                    class="img-responsive" style="width: 80px">
+                                <img src="./../img/goal-buster/lespepitestech.jpg" class="img-responsive"
+                                    style="width: 80px">
                             </div>
                             <div class="col-sm-10">
                                 <h4><strong>Les Pépites Tech</strong></h4>
@@ -127,6 +127,7 @@
         </div>
 
         <div class="col-md-3">
+            <h3>Technology Stack</h3>
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> Angular.JS</li>
                 <li><i class="ion-ios-circle-filled"></i> Node.JS</li>
