--- a/projects/trib.html
+++ b/projects/trib.html
@@ -92,6 +92,7 @@
         </div>
 
         <div class="col-md-3">
+            <h3>Technology Stack</h3>
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> Vue.JS</li>
                 <li><i class="ion-ios-circle-filled"></i> Nuxt.JS</li>
