--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <p>You can also download my resume below 👇!</p>
             <div class="row">
                 <div class="col-md-3">
-                    <a href="./pdf/CV_KHSIME_MARWANE_EN.pdf" class="btn btn-box" download>ENGLISH RESUME</a>
+                    <a href="./pdf/CV_KHSIME_MARWANE_EN.pdf" class="btn btn-box" download>MY ENGLISH RESUME</a>
                 </div>
             </div>
             <div class="h-30"></div>
